samples/syntax_errors/import_error.epl
//This file shouldn't be parsed

import "abcdef";
import ab
import abc.efg;
import